--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "Frederick-blog",
-    "title": "Frederick Blog",
+    "title": "豪&洋 Blog",
     "author": "Frederick <frederick_hou@163.com>",
     "version": "1.7.0",
     "homepage": "http://FrederickHou.github.io",
