--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Frederick Blog
-SEOTitle: 剑豪的博客 | Frederick Blog
+title: 豪&洋 Blog
+SEOTitle: 豪&洋的博客
 header-img: img/hope1.jpg
 email: frederick_hou@163.com
 description: "Every failure is leading towards success."
-keyword: "BY, Frederick Blog, 剑豪的博客, 侯剑豪"
+keyword: "BY, 豪&洋 Blog, 豪&洋的博客"
 url: "http://frederickhou.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/FrederickHou/FrederickHou.github.io.git" # you code repository
